# pyTrader

./: .gitignore  pyproject.toml  requirements.txt
pytrade/: __init__.py  __main__.py  cli.py
tests/: test_pytrade.py
