[tool.poetry]
name = "pytrader"
version = "0.1.0"
description = ""
authors = ["Brandon Egger <me@brandonegger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
